# SPICE-Python-Automation

./: .gitignore  PRIVACY.md  README.md  TERMS.md  pyproject.toml  start_cloud.sh
docs/: cloud-setup.md
prompts/: cloud_system_prompt.md  local_system_prompt.md
skills/spicebridge/: SKILL.md
src/spicebridge/: __init__.py  __main__.py  auth.py  circuit_manager.py  composer.py  constants.py  kicad_export.py  metrics.py  model_generator.py  model_store.py  monte_carlo.py  netlist_utils.py  parser.py  prompt_translator.py  sanitize.py  schematic.py  schematic_cache.py  server.py  setup_wizard.py  simulator.py  solver.py  standard_values.py  svg_renderer.py  template_manager.py  web_viewer.py
tests/: test_auth.py  test_auto_design.py  test_circuit_manager.py  test_cli.py  test_composer.py  test_constants.py  test_health.py  test_kicad_export.py  test_measurement.py  test_metrics.py  test_model_generator.py  test_model_integration.py  test_model_store.py  test_monte_carlo.py  test_parser.py  test_parser_measurement.py  test_parser_robustness.py  test_prompt_translator.py  test_resource_limits.py  test_sanitize.py  test_schematic.py  test_schematic_cache.py  test_security.py  test_server.py  test_setup_wizard.py  test_simulator.py  test_solver.py  test_svg_renderer.py  test_template_manager.py  test_template_server.py  test_throttle.py  test_web_viewer.py
wiki/: index.md  log.md
wiki/concepts/: circuit-lifecycle.md  cloud-deployment.md  mcp-tool-architecture.md  model-library.md  multi-stage-composition.md  observability.md  prompt-translation.md  security-model.md  simulation-pipeline.md  template-system.md  tolerance-analysis.md  visualization-pipeline.md
wiki/entities/: brandon.md  cloudflare.md  dependencies.md  kicad.md  mcp.md  ngspice.md
wiki/summaries/: __init__.md  __main__.md  auth.md  circuit_manager.md  composer.md  constants.md  kicad_export.md  (+22 more)
(+12 files in other folders)
