[build-system]
requires = ["setuptools>=68.0", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "spicebridge"
version = "1.3.0"
description = "AI-powered circuit design bridge connecting language models to ngspice simulation via MCP"
license = {text = "GPL-3.0-or-later"}
authors = [{name = "Brandon"}]
readme = "README.md"
keywords = ["circuit", "simulation", "ngspice", "mcp", "ai", "spice", "electronics", "eda"]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Electronic Design Automation (EDA)",
]
requires-python = ">=3.10"
dependencies = [
    "spicelib>=1.4.0,<2",
    "numpy>=1.24,<3",
    "mcp[cli]>=1.25,<2",
    "schemdraw>=0.19,<1",
    "aiohttp>=3.10.11,<4",
    "cairosvg>=2.7,<3",
    "psutil>=5.9,<7",
]

[project.urls]
Homepage = "https://github.com/clanker-lover/spicebridge"
Repository = "https://github.com/clanker-lover/spicebridge"

[project.scripts]
spicebridge = "spicebridge.__main__:main"
spicebridge-viewer = "spicebridge.web_viewer:main"

[project.optional-dependencies]
dev = [
    "ruff",
    "pytest",
    "pytest-asyncio",
    "pytest-aiohttp",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
spicebridge = ["templates/*.json", "static/*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "N", "UP", "B", "SIM"]

[tool.ruff.lint.per-file-ignores]
"src/spicebridge/kicad_export.py" = ["E501"]
"src/spicebridge/server.py" = ["E501"]
"src/spicebridge/svg_renderer.py" = ["E501"]
"src/spicebridge/web_viewer.py" = ["E501"]
